2005-03-13  Mark Crichton  <crichton@gimp.org>

	* worker/blogger.xml: changed the URL.  Don't think people would be
	interested in my banality

2005-03-09  Atsushi Enomoto  <atsushi@ximian.com>

	* worker/blogger.xml : moved my url.

2005-03-06  Joshua Tauberer <tauberer@for.net>

	* worker/bloggers.xml: Added myself (yesterday).
	As usual, forgot the ChangeLog.

2005-02-27  Daniel Morgan <danielmorgan@verizon.net>

	* worker/bloggers.xml: updated URL to point to a MoveableType
        template that Monologue can read.  Thanks to BenM

2005-02-24  Mark Crichton <crichton@gimp.org>

	* worker/bloggers.xml: Added myself to the cool
	kids list

2005-02-20  Daniel Morgan <danielmorgan@verizon.net>

	* worker/bloggers.xml: Updated my feed url and 
	updated my first name to Daniel

2005-02-15 Jb Evain <jb.evain@dotnetguru.org>

	* worker/bloggers.xml: Updated my feed url

2005-02-10  Christian Hergert <christian.hergert@gmail.com>

	* worker/bloggers.xml: Updated to add my blog

2005-01-31  Jambunathan K  <kjambunathan.devel@gmail.com>
	* worker/bloggers.xml: Updated the feed url.
	
2005-01-26  Zac Bowling  <zac@zacbowling.com>
	* worker/bloggers.xml: Long awaited addition of my blog.

2005-01-18  Jb Evain  <jb.evain@dotnetguru.org>

	* worker/bloggers.xml: Activate my blog

2005-01-14  Peter Bartok  <pbartok@novell.com>

	* worker/bloggers.xml: Added the new MWF Weblog

2004-11-29  Rafael Teixeira <rafaelteixeirabr@hotmail.com>
	* worker/default.tpl: Oops!!! it should be "<link ... href='index.rss' ... />" not "... href='index.css' ..."

2004-11-12  Rafael Teixeira <rafaelteixeirabr@hotmail.com>
	* worker/default.tpl: Added "<link rel='alternate' title='Monologue' href='index.css' type='application/rss+xml' />"
	for the benefit of Firefox users, like the www.mono-project.com does

2004-10-03  Alex Graveley  <alex@beatniksoftware.com>

	* worker/bloggers.xml: Add myself.

2004-09-20  Jackson Harper  <jackson@ximian.com>
