@@ -1,3 +1,7 @@
+2005-03-17 Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* worker/monologue-worker.cs: group requests by URL.
+
 2005-03-13  Mark Crichton  <crichton@gimp.org>
 
 	* worker/blogger.xml: changed the URL.  Don't think people would be
